flux/apps/int/stash/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stash
  labels:
    app.kubernetes.io/instance: stash
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: stash
      app.kubernetes.io/instance: stash
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stash
        app.kubernetes.io/instance: stash
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: stash
          image: "feederbox826/stash-s6:hwaccel-alpine-2026-05-18" # the default stash image does not support hwaccel
          imagePullPolicy: IfNotPresent
          command: [ "sh", "-c" ]
          args:
            - |
              apk add --no-cache git &&
              exec /bin/bash /opt/entrypoint.sh "$@"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: stash-data
              mountPath: /data
            - name: stash-videos
              mountPath: /videos
            - name: stash-special
              mountPath: /special
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 4Gi
              gpu.intel.com/i915: "1" # require iGPU
      volumes:
        - name: stash-data
          persistentVolumeClaim:
            claimName: stash-data-pvc
        - name: stash-videos
          persistentVolumeClaim:
            claimName: videos-pvc
        - name: stash-special
          persistentVolumeClaim:
            claimName: special-pvc
