flux/apps/int/stash/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stash
  labels:
    app.kubernetes.io/name: stash
    app.kubernetes.io/instance: stash
spec:
  selector:
    app.kubernetes.io/name: stash
    app.kubernetes.io/instance: stash
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      targetPort: http
      protocol: TCP
